--- a/template/src/main/webapp/index.html
+++ b/template/src/main/webapp/index.html
@@ -4,145 +4,37 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Welcome to OC2P</title>
-  <style>
-  html { 
-  background: url(images/linen_light.jpg?v=0382.14157) repeat #d1d5d8; 
-  }
-  body {
-    background: url(images/linen_dark.png?v=514a.580) repeat #666;
-    color: white;
-    font-family: "Helvetica Neue",Helvetica,"Liberation Sans",Arial,sans-serif;
-    width: 40em;
-    margin: 0 auto;
-    padding: 3em;
-  }
-  a {
-    color: black;
-  }
-
-  h1 {
-    text-transform: capitalize;
-    -moz-text-shadow: -1px -1px 0 black;
-    -webkit-text-shadow: 2px 2px 2px black;
-    text-shadow: -1px -1px 0 black;
-    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
-    background: #CC0000;
-    width: 22.5em;
-    margin: 1em -2em;
-    padding: .3em 0 .3em 1.5em;
-    position: relative;
-  }
-  h1:before {
-    content: '';
-    width: 0;
-    height: 0;
-    border: .5em solid #91010B;
-    border-left-color: transparent;
-    border-bottom-color: transparent;
-    position: absolute;
-    bottom: -1em;
-    left: 0;
-    z-index: -1000;
-  }
-  h1:after {
-    content: '';
-    width: 0;
-    height: 0;
-    border: .5em solid #91010B;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
-    position: absolute;
-    bottom: -1em;
-    right: 0;
-    z-index: -1000;
-  }
-  h2 { 
-    margin: 2em 0 .5em;
-    border-bottom: 1px solid #999;
-  }
-
-  h3 {
-    margin: 1em 0 .5em;
-    border-bottom: 1px solid #999;
-  }
-
-  pre {
-    background: black;
-    padding: 1em 0 0;
-    -webkit-border-radius: 1em;
-    -moz-border-radius: 1em;
-    border-radius: 1em;
-    color: #9cf;
-  }
-
-  ul { 
-    margin: 0; 
-    padding: 0;
-  }
-  li {
-    list-style-type: none;
-    padding: .5em 0;
-  }
-
-  .brand {
-    display: block;
-    text-decoration: none;
-  }
-  .brand .brand-image {
-    float: left;
-    border: none;
-  }
-  .brand .brand-text {
-    float: left;
-    font-size: 24px;
-    line-height: 24px;
-    padding: 4px 0;
-    color: white;
-    text-transform: uppercase;
-  }
-  .brand:hover,
-  .brand:active {
-    text-decoration: underline;
-  }
-
-  .brand:before,
-  .brand:after {
-    content: ' ';
-    display: table;
-  }
-  .brand:after {
-    clear: both;
-  }
-  </style>
-
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/panels.css">
   <script type="text/javascript" src="/js/owf-widget-min.js"></script>
-  
+  <script type="text/javascript" src="/js/panels.js"></script>
   <script type="text/javascript"> 
 
-  function sayHello() {
-    owfdojo.byId('sendmessage').innerHTML = 'Sending Intent: sayHello<br>';
+  function sayHelloIntent() {
+    owfdojo.byId('sendmessage').innerHTML = 'Sending Intent: ' + owfdojo.byId("helloIntentTxt").value + '<br>';
     OWF.Intents.startActivity(
             {   
                action:'sayHello',
                dataType:'text/plain'
             },
             {
-               data: 'Hi There!'
+               data: owfdojo.byId("helloIntentTxt").value
             },
-            function (dest) {
-		if (dest.length > 0) {
-                	owfdojo.byId('sendmessage').innerHTML += 'Intent was handled by ' + dest[0].id + '<br>';
-                	dest[0].onReady(
-                		function () {
-                			owfdojo.byId('sendmessage').innerHTML += dest[0].id + ' called notifyWidgetReady and is ready<br>';
-                		},
-                		this
-                	);
+	function (dest) {
+                if (dest.length > 0) {
+                        owfdojo.byId('sendmessage').innerHTML += 'Intent was handled by ' + dest[0].id + '<br>';
+                        dest[0].onReady(
+                                function () {
+                                        owfdojo.byId('sendmessage').innerHTML += dest[0].id + ' called notifyWidgetReady and is ready<br>';
+                                },
+                                this
+                        );
                 }
                 else {
-                	owfdojo.byId('sendmessage').innerHTML += 'Intent was canceled<br>';
+                        owfdojo.byId('sendmessage').innerHTML += 'Intent was canceled<br>';
                 }
             }
+
     );
   }
 
@@ -165,8 +57,6 @@
   owfdojo.addOnLoad(function() {
   		if (OWF.Util.isRunningInOWF()) {
 			owfdojo.byId('owfActive').style.visibility = 'visible';
-               	//	owfdojo.byId('owfActive').innerHTML = 'Ozone is ACTIVE ';
-                //	owfdojo.byId('owfActive').innerHTML += '<button type="button" onclick="sayHello()">Say Hello!</button>';
         	} else {
 			owfdojo.byId('owfActive').innerHTML = 'Ozone is INACTIVE ';
         	}
@@ -189,19 +79,6 @@
   <p>
     Place your application here
   </p>
-
-  <div id="owfActive">
-    Ozone Framework is ACTIVE <div id="instanceId" style="display:inline-block"></div><br>
-    <button type="button" onclick="sayHello()">Say Hello!</button><br>
-    Sending Intents
-    <pre>
-        <div id="sendmessage"></div>
-    </pre> 
-    Receiving Intents
-    <pre>
-        <div id="recvmessage"></div>
-    </pre>
-  </div>
   <p>
     In order to commit to your new project, go to your projects git repo  (created with the rhc app create command) directory.
   </p>
@@ -218,6 +95,41 @@
     Then reload this page.
   </p>
   <p>See the README.md file in the application Git repository for more information on the options for deploying applications.</p>
+
+  <div id="owfActive">
+    <h2>Ozone</h2>
+    Ozone Framework is ACTIVE <div id="instanceId" style="display:inline-block"></div><br>
+    <div class="panelcollapsed">
+      <h2 style="color:black">Ozone Intents</h2>
+      <div class="panelcontent">
+        <button type="button" onclick="sayHelloIntent()">Send Hello Intent!</button>
+        <input type="text" name="helloIntentTxt" id="helloIntentTxt" value="Hi There!"><br>
+          <pre>
+              <div id="sendmessage"></div>
+          </pre>
+          Receiving
+          <pre>
+              <div id="recvmessage"></div>
+          </pre>
+      </div>
+    </div>
+
+    <div class="panelcollapsed">
+      <h2>Another panel</h2>
+      <div class="panelcontent">
+            <p>Content goes here</p>
+            <p>More content</p>
+        <p>More content</p>
+      </div>
+    </div>
+
+    <div class="panelcollapsed">
+      <h2>Initially Collapsed</h2>
+      <div class="panelcontent">
+            <p>This panel is collapsed by default (until user sets a preference)</p>
+      </div>
+    </div>
+  </div>
 
 <h2>Debugging</h2>
 <p>View debugging information about the server environment including memory pools by loading this JSP page: <a href="snoop.jsp">Debug</a></p>
